duniverse/menhirLib.20200211/test/static/bad/obscene-dollar.mly
%token <int> A
%token B C

%%

main: x = A; y = B
  { $2 + $1 }

