duniverse/menhirLib.20200211/test/static/bad/obscene-dollar.exp
File "obscene-dollar.mly", line 7, characters 9-11:
Error: please do not say: $1. Instead, say: x.
